[package]
name = "HDR_Installer"
version = "0.0.0" # keep this at 0.0.0 so that it always prompts for an update
authors = ["PiNE"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
#skyline-update = { git = "https://github.com/FaultyPine/skyline-update-hacky-directory-support" }
skyline-update = { path = "../skyline-update-hacky-directory-support/skyline-update" }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
codegen-units = 1